# personal-website-code

./: .gitignore  LICENSE  README.md  build.sh  clean.sh  personal-website-code.cabal  shell.nix  toLive.sh
content/css/: style.css
content/html/: fusion.html  home.html  noise.html
content/html_templates/: default.html
content/markdown/: CV.md  clifford.md  mix.md  noise.md  publickey.md  saddles.md  tableau.md
src/: Main.hs
