name:                personal-website-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danielbarter/personal-website-code#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2020 Daniel Barter
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable personal-website-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , directory
